# CLI-agent

./: README.md  main.py  pyproject.toml
app/: main.py  pyproject.toml
cli/commands/: app.py  mac_apps.py  mac_browser.py  mac_settings.py
cli/core/: config.py  logging.py
cli/tools/common/: run_script.py
cli/tools/macos/: browser.py  mac_settings.py
src/agent/: llm.py  prompt.py
src/cli/: app.py
src/cli/commands/: mac_apps.py
src/commands/: agent_chat.py  app.py  chat.py  mac_apps.py  mac_browser.py  mac_commands.py  mac_settings.py
src/core/: logging.py
src/services/: installer.py  startup.py
src/tools/common/: run_script.py  subprocess.py
src/tools/macos/: browser.py  mac_finder.py  mac_settings.py
src/utils/: dependencies.py  exceptions.py
