[project]
name = "cli-agent"
version = "0.1.0"
description = "A personal, fully local CLI agent that can access Mac apps, open/close them, search the internet through the browser, and act as your second brain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "typer>=0.26.8",
]
