[project]
name = "cli-agent"
version = "0.1.0"
description = "A personal, fully local CLI agent that can access Mac apps, open/close them, search the internet through the browser, and act as your second brain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sentry-sdk>=2.35.0",
    "typer>=0.26.8",
    "ytmusicapi>=1.12.1",
]
